--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Ecommerce Template</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this template (imports bootstrap from LESS) -->
     <link href="css/style.css" rel="stylesheet">
 
   </head>
@@ -30,30 +27,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li><a href="#">What's New</a></li>
+            <li><a href="#">Specials</a></li>
+            <li><a href="#">My Account</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Default <span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-static-top/index.html">Static top</a></li>
-            <li><a href="../navbar-fixed-top/index.html">Fixed top</a></li>
+	    <form class="navbar-form">
+	      <div class="form-group">
+		<input type="text" class="form-control" placeholder="Search..."/>
+	      </div>
+	      <button type="submit" class="btn btn-default">Search</button>
+	    </form>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
