--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <title>Ecommerce Template</title>
 
+    <link href="http://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet" type="text/css"/>
+
     <!-- Custom styles for this template (imports bootstrap from LESS) -->
     <link href="css/style.css" rel="stylesheet">
 
@@ -16,6 +18,28 @@
   <body>
 
   <div class="container">
+
+    <header>
+      <div class="row">
+	<div class="col-md-4 col-sm-12">
+	  <h1 class="logo"><i class="glyphicon glyphicon-tag"></i> My <span class="primary">Store</span></h1>
+	  <p class="subtext">Bootstrap Ecommerce Template</p>
+	</div> <!-- col-md-4 -->
+	<div class="col-md-8 col-sm-12">
+	  <form class="form-inline">
+	    <div class="form-group">
+	      <label>Email</label>
+	      <input type="email" class="form-control" placeholder="Enter Email">
+	    </div>
+	    <div class="form-group">
+	      <label>Password</label>
+	      <input type="password" class="form-control" placeholder="Enter Password">
+	    </div>
+	    <button type="submit" class="btn btn-default">Login</button>
+	  </form>
+	</div> <!-- col-md-8 -->
+      </div> <!-- row -->
+    </header>
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default">
