Add products grid

--- a/index.html
+++ b/index.html
@@ -79,6 +79,133 @@
         <a class="btn btn-lg btn-primary" href="../../components/index.html#navbar" role="button">View navbar docs &raquo;</a>
       </p>
     </div>
+
+    <section id="products" class="">
+      <div class="row">
+	<div class="col-md-4">
+	  <div class="thumbnail">
+	    <img src="img/s5.png">
+	    <div class="caption">
+	      <h4 class="pull-right">$699.99</h4>
+	      <h4><a href="product.html">Samsung Galaxy S5</a></h4>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat, magna ornare euismod</p>
+	    </div> <!-- caption -->
+	    <div class="ratings" id="">
+	      <p class="pull-right">15 Reviews</p>
+	      <p>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+	      </p>
+	    </div>
+	  </div> <!-- thumbnail -->
+	</div> <!-- col-md-4 -->
+	<div class="col-md-4">
+	  <div class="thumbnail">
+	    <img src="img/xbox.png">
+	    <div class="caption">
+	      <h4 class="pull-right">$399.99</h4>
+	      <h4><a href="product.html">Xbox One</a></h4>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat, magna ornare euismod</p>
+	    </div> <!-- caption -->
+	    <div class="ratings" id="">
+	      <p class="pull-right">8 Reviews</p>
+	      <p>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star-empty"></span>
+	      </p>
+	    </div>
+	  </div> <!-- thumbnail -->	  
+	</div> <!-- col-md-4 -->
+	<div class="col-md-4">
+	  <div class="thumbnail">
+	    <img src="img/ps4.png">
+	    <div class="caption">
+	      <h4 class="pull-right">$699.99</h4>
+	      <h4><a href="product.html">Playstation 4</a></h4>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat, magna ornare euismod</p>
+	    </div> <!-- caption -->
+	    <div class="ratings" id="">
+	      <p class="pull-right">4 Reviews</p>
+	      <p>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+	      </p>
+	    </div>
+	  </div> <!-- thumbnail -->	  
+	</div> <!-- col-md-4 -->
+      </div> <!-- row -->
+      <div class="row">
+	<div class="col-md-4">
+	  <div class="thumbnail">
+	    <img src="img/tv.png">
+	    <div class="caption">
+	      <h4 class="pull-right">$599.99</h4>
+	      <h4><a href="product.html">Vizio Smart TV</a></h4>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat, magna ornare euismod</p>
+	    </div> <!-- caption -->
+	    <div class="ratings" id="">
+	      <p class="pull-right">12 Reviews</p>
+	      <p>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star-empty"></span>
+	      </p>
+	    </div>
+	  </div> <!-- thumbnail -->
+	</div> <!-- col-md-4 -->
+	<div class="col-md-4">
+	  <div class="thumbnail">
+	    <img src="img/surface.png">
+	    <div class="caption">
+	      <h4 class="pull-right">$499.99</h4>
+	      <h4><a href="product.html">Microsoft Surface</a></h4>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat, magna ornare euismod</p>
+	    </div> <!-- caption -->
+	    <div class="ratings" id="">
+	      <p class="pull-right">9 Reviews</p>
+	      <p>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star-empty"></span>
+		<span class="glyphicon glyphicon-star-empty"></span>
+		<span class="glyphicon glyphicon-star-empty"></span>
+	      </p>
+	    </div>
+	  </div> <!-- thumbnail -->	  
+	</div> <!-- col-md-4 -->
+	<div class="col-md-4">
+	  <div class="thumbnail">
+	    <img src="img/iphone.png">
+	    <div class="caption">
+	      <h4 class="pull-right">$599.99</h4>
+	      <h4><a href="product.html">iPhone 5</a></h4>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat, magna ornare euismod</p>
+	    </div> <!-- caption -->
+	    <div class="ratings" id="">
+	      <p class="pull-right">22 Reviews</p>
+	      <p>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+		<span class="glyphicon glyphicon-star"></span>
+	      </p>
+	    </div>
+	  </div> <!-- thumbnail -->	  
+	</div> <!-- col-md-4 -->
+      </div> <!-- row -->
+    </section>
     
   </div> <!-- /container -->
   
