Complete product details page with accordion and footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#">What's New</a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">My Account</a></li>
@@ -255,7 +255,10 @@
     
   </div> <!-- /container -->
   
-  
+  <footer>
+    <p>MyStore Copyright &copy; 2015 - <a href="#">Terms</a> &middot; <a href="#">Privacy</a></p>
+  </footer>  
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
