--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#">What's New</a></li>
             <li><a href="#">Specials</a></li>
             <li><a href="#">My Account</a></li>
@@ -93,6 +93,51 @@
 		</select>
 	      </p>
 	      <a href="#" class="btn btn-success">Buy Now</a>
+	      <br/><br/><br/>
+	      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+		<div class="panel panel-default">
+		  <div class="panel-heading" role="tab" id="headingOne">
+		    <h4 class="panel-title">
+		      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			Description
+		      </a>
+		    </h4>
+		  </div>
+		  <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+		    <div class="panel-body">
+		      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		    </div>
+		  </div>
+		</div>
+		<div class="panel panel-default">
+		  <div class="panel-heading" role="tab" id="headingTwo">
+		    <h4 class="panel-title">
+		      <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+			Specifications
+		      </a>
+		    </h4>
+		  </div>
+		  <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+		    <div class="panel-body">
+		      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		    </div>
+		  </div>
+		</div>
+		<div class="panel panel-default">
+		  <div class="panel-heading" role="tab" id="headingThree">
+		    <h4 class="panel-title">
+		      <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+			Related
+		      </a>
+		    </h4>
+		  </div>
+		  <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+		    <div class="panel-body">
+		      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		    </div>
+		  </div>
+		</div>
+	      </div>
 	    </div> <!-- col-md-8 -->
 	  </div> <!-- row -->
 	</div> <!-- col-md-8 -->
@@ -110,6 +155,9 @@
         
   </div> <!-- /container -->
   
+  <footer>
+    <p>MyStore Copyright &copy; 2015 - <a href="#">Terms</a> &middot; <a href="#">Privacy</a></p>
+  </footer>  
   
     <!-- Bootstrap core JavaScript
     ================================================== -->
